--- a/web-recogniser/index.html
+++ b/web-recogniser/index.html
@@ -15,7 +15,7 @@
     <div class="content">
         <img src="./images/logo.svg" class="logo">
         <div class="input-canvas-container">
-            <span class="label">Draw any single digit from 0 to 9. Write into the canvas.</span>
+            <span class="label">Draw any number that you can write. Write into the canvas.</span>
             <canvas id="input-canvas"></canvas>
             <div class="controls">
                 <a href="#" class="btn btn-primary" id="recognise-button">Predict</a>
